[package]
name = "file-transfer-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
bytes = "1.10.1"
chrono = "0.4.40"
encoding_rs = "0.8.35"
http = "1.3.1"
image = "0.25.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "=0.6.2", features = ["cors"] }
